feat: Complete matchesFilter pattern with mutable collections and comprehensive coverage
- Fix immutable collection issue: All matchesFilter methods now create mutable copies
- Use Arrays.asList instead of List.of for nested entity field searches
- Add CTypeEntity.matchesFilter: workflow entity, attributeNonDeletable boolean, color string
- Add CNonProjectType.matchesFilter: company entity, attributeNonDeletable boolean, color string
- Add CMeeting.matchesFilter: entityType, relatedActivity, responsible entity fields
- Add CRisk.matchesFilter: entityType entity field
- Fix CEntityNamed: Default to "name" field when fieldNames is null/empty
- All tests pass successfully

Co-authored-by: yalovali <234063+yalovali@users.noreply.github.com>