@@ -72,21 +72,31 @@ public abstract class CEntityOfProject<EntityClass> extends CEntityNamed<EntityC
 	}
 
 	@Override
-	public boolean matchesFilter(final String searchValue, final @Nullable Collection<String> fieldNames) {
+	public boolean matchesFilter(final String searchValue, java.util.@Nullable Collection<String> fieldNames) {
 		if ((searchValue == null) || searchValue.isBlank()) {
 			return true; // No filter means match all
 		}
-		if (super.matchesFilter(searchValue, fieldNames)) {
+		// Ensure fieldNames is mutable for the entire traversal chain
+		java.util.Collection<String> mutableFieldNames = fieldNames;
+		if (fieldNames == null) {
+			mutableFieldNames = new java.util.ArrayList<>();
+		} else if (!(fieldNames instanceof java.util.ArrayList)) {
+			mutableFieldNames = new java.util.ArrayList<>(fieldNames);
+		}
+		if (super.matchesFilter(searchValue, mutableFieldNames)) {
 			return true;
 		}
 		final String lowerSearchValue = searchValue.toLowerCase().trim();
-		if (fieldNames.remove("project") && (getProject() != null) && getProject().matchesFilter(lowerSearchValue, List.of("name"))) {
+		if (mutableFieldNames.remove("project") && (getProject() != null)
+				&& getProject().matchesFilter(lowerSearchValue, java.util.Arrays.asList("name"))) {
 			return true;
 		}
-		if (fieldNames.remove("assignedTo") && (getAssignedTo() != null) && getAssignedTo().matchesFilter(lowerSearchValue, List.of("name"))) {
+		if (mutableFieldNames.remove("assignedTo") && (getAssignedTo() != null)
+				&& getAssignedTo().matchesFilter(lowerSearchValue, java.util.Arrays.asList("name"))) {
 			return true;
 		}
-		if (fieldNames.remove("createdBy") && (getCreatedBy() != null) && getCreatedBy().matchesFilter(lowerSearchValue, List.of("name"))) {
+		if (mutableFieldNames.remove("createdBy") && (getCreatedBy() != null)
+				&& getCreatedBy().matchesFilter(lowerSearchValue, java.util.Arrays.asList("name"))) {
 			return true;
 		}
 		return false;
